fixing color header border for dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -32,6 +32,7 @@
   --start-button-background-color: white;
   --start-button-background-hover-color: #f7f7f7;
   --start-button-background-click-color: #ebebeb;
+  --start-header-border-color: white;
 }
 
 [data-theme='dark'] {
@@ -63,6 +64,7 @@
   --start-button-background-color: #555555;
   --start-button-background-hover-color: #3e3e3e;
   --start-button-background-click-color: #343434;
+  --start-header-border-color: #1b1b1d;
 }
 
 .markdown > h1 {
